--- a/app/views/m.company.html
+++ b/app/views/m.company.html
@@ -1,6 +1,6 @@
 <header class="m-header-fixed" ng-controller="headerCntl">
     <div class="col-sm-12 col-xs-12 no-padding-hr m-header-background ">
-        <img id="m-logo" src="images/logo-white-44.png" alt="logo" height="45" />
+        <img id="m-logo" style="margin-top:13px;float:left;" src="images/logo-white-44.png" alt="logo"/>
         <span class="m-font-size-logo-name m-header-text-color">Companies</span>
         <img ng-click="clientLogout()" src="images/logout.png" class="pull-right" style="margin:13px"></img>
     </div>
