--- a/app/views/m.login.html
+++ b/app/views/m.login.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-12">
                 <div class="text-center">
-                    <img style="margin-top:80px;margin-bottom:50px;margin-left:-8px;" src="images/40X40.png"  />
+                    <img style="margin-top:80px;margin-bottom:50px;margin-left:-8px;" src="images/portal-blue.png"  />
                 </div>
                 <div ng-show="showerror" class="col-md-12 no-padding-hr">
                     <span style="color:#EF5F5F">{{errormessage}}</span>
