--- a/app/views/company.html
+++ b/app/views/company.html
@@ -1,10 +1,10 @@
 <div id="company" class="tab-pane ">
     <div class="container table_container table-container-width no-padding-hr">
-        <div class="row no-margin-hr fixedsearch">
+        <div class="row no-margin-hr">
             <h3 class="no-margin pull-left">Companies <span class="glyphicon glyphicon-refresh refresh-size" aria-hidden="true" ng-click="getallcompanysdata()"></span></h3>
             <button type="button" class="btn btn-md pull-right postions-search" ng-click="search()"><span class="glyphicon glyphicon-search"></span></button>
         </div>
-        <div class="row" style="margin-top:30px;">
+        <div class="row">
             <div class="col-md-12">
                 <table ng-table=" multiclient" class="table table-bordered client-table " show-filter="searchEnable">
                     <tr ng-repeat="user in $data " ng-class="{ 'disablerow': user.status==='N' } ">
@@ -68,8 +68,8 @@
             <div class="modal-footer">
                 <div class="row ">
                     <div class="col-md-4 ">
-                        <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal ">No</button>
-                        <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal " ng-click="deleteclient(props.id) ">Yes</button>
+                        <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal">No</button>
+                        <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal" ng-click="deleteclient(props.id) ">Yes</button>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <h1 class="modal-title ">Add Company</h1>
                 <div class="row no-margin-hr ">
                     <div class="col-md-12 no-padding-hr ">
-                        <label class="pull-right "><input type="checkbox " ng-model="props.isActive " ng-init="props.isActive=true "><span> Active</span></label>
+                        <label class="pull-right "><input type="checkbox" ng-model="props.isActive" ng-init="props.isActive=true"><span> Active</span></label>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
                             <div class="col-md-offset-4 required ">
-                                <label class="col-md-12 no-padding-hr "><input type="checkbox " ng-model="props.multicolumn " class="checkboxspace ">Multi column voucher</label>
+                                <label class="col-md-12 no-padding-hr "><input type="checkbox" ng-model="props.multicolumn " class="checkboxspace ">Multi column voucher</label>
                             </div>
                         </div>
                         <!-- <div class="col-md-12 form-group no-padding-hr ">
@@ -171,7 +171,7 @@
                 <h1 class="modal-title ">Edit Company</h1>
                 <div class="row no-margin-hr ">
                     <div class="col-md-12 no-padding-hr ">
-                        <label class="pull-right "><input type="checkbox " ng-model="props.isActive "><span> Active</span></label>
+                        <label class="pull-right "><input type="checkbox" ng-model="props.isActive "><span> Active</span></label>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
                             <div class="col-md-offset-4 ">
-                                <label class="col-md-12 no-padding-hr "><input type="checkbox " ng-model="props.multicolumn " class="checkboxspace ">Multi column voucher</label>
+                                <label class="col-md-12 no-padding-hr "><input type="checkbox" ng-model="props.multicolumn " class="checkboxspace ">Multi column voucher</label>
                             </div>
                         </div>
                         <div ng-show="showerrormessage " class="col-md-12 no-padding-hr form-group ">
@@ -246,11 +246,11 @@
             <div class="modal-footer ">
                 <div class="row no-margin-hr ">
                     <div class="pull-left margin-left ">
-                        <button type="button " class="btn btn-danger " data-toggle="modal " data-target="#deleteModal " ng-click="deletemodelshow() ">Delete</button>
+                        <button type="button " class="btn btn-danger" data-toggle="modal" data-target="#deleteModal" ng-click="deletemodelshow()">Delete</button>
                     </div>
-                    <div class="col-md-5 pull-right no-padding-hr ">
-                        <button type="button " class="btn background-defalt save-cancel-button " ng-click="editcancelForm() ">Cancel</button>
-                        <button type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="editingCompany() ">Save</button>
+                    <div class="col-md-5 pull-right no-padding-hr">
+                        <button type="button " class="btn background-defalt save-cancel-button " ng-click="editcancelForm()">Cancel</button>
+                        <button type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="editingCompany()">Save</button>
                     </div>
                 </div>
             </div>
@@ -270,13 +270,13 @@
                     <div class="col-md-12 no-padding-hr border ">
                         <div class="col-md-12 no-padding-hr padding-line ">
                             <label class="col-md-12 ">Desktop:</label>
-                            <label class="col-md-offset-1 col-md-11 "><input  type="checkbox " ng-model="smsfor_receipt " class="checkboxspace ">{{smssettings[0].name}}</label>
-                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox " ng-model="smsfor_payment " class="checkboxspace ">{{smssettings[1].name}}</label>
+                            <label class="col-md-offset-1 col-md-11 "><input  type="checkbox" ng-model="smsfor_receipt" class="checkboxspace">{{smssettings[0].name}}</label>
+                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox" ng-model="smsfor_payment" class="checkboxspace">{{smssettings[1].name}}</label>
                         </div>
                         <div class="col-md-12 no-padding-hr padding-line ">
                             <label class="col-md-12 ">Mobile:</label>
-                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox " ng-model="smsfor_mobile_receipt " class="checkboxspace ">{{smssettings[2].name}}</label>
-                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox " ng-model="smsfor_mobile_payment " class="checkboxspace ">{{smssettings[3].name}}</label>
+                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox" ng-model="smsfor_mobile_receipt" class="checkboxspace">{{smssettings[2].name}}</label>
+                            <label class="col-md-offset-1 col-md-11 "><input type="checkbox" ng-model="smsfor_mobile_payment" class="checkboxspace">{{smssettings[3].name}}</label>
                         </div>
                     </div>
                 </div>
@@ -284,9 +284,9 @@
             <div class="modal-footer ">
                 <div class="row no-margin-hr ">
                     <div class="col-md-5 pull-right no-padding-hr ">
-                        <button type="button " class="btn background-defalt save-cancel-button " ng-click="historyDetails() " data-dismiss="modal ">History</button>
-                        <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal ">Cancel</button>
-                        <button type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="saveSmsSettingtoSever() ">Save</button>
+                        <button type="button" class="btn background-defalt save-cancel-button" ng-click="historyDetails()" data-dismiss="modal">History</button>
+                        <button type="button" class="btn background-defalt save-cancel-button " data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn background-defalt save-cancel-button tabicon " ng-click="saveSmsSettingtoSever()">Save</button>
                     </div>
                 </div>
             </div>
