--- a/app/views/resetpassword.html
+++ b/app/views/resetpassword.html
@@ -3,9 +3,9 @@
         <div class="col-md-12">
             <div class="col-md-4 col-md-offset-4">
                 <div class="text-center">
-                    <img style="width:200px" src="images/loginPicture.png" />
+                    <img style="margin-bottom:50px;margin-top:50px;margin-left:-8px;" src="images/portal-blue.png" />
                 </div>
-                <h3 class="text-center underline">MobiBooks</h3>
+                <!-- <h3 class="text-center underline">MobiBooks</h3> -->
                 <div ng-show="showerror" class="col-md-12 no-padding-hr">
                     <span style="color:#EF5F5F">{{errormessage}}</span>
                 </div>
